--- a/blog_api/Cargo.toml
+++ b/blog_api/Cargo.toml
@@ -27,4 +27,6 @@ duration-str = "0.18.0"
 clap = { version = "4.5.54", features = ["derive"] }
 urlencoding = "2.1.3"
 hotwatch = "0.5.0"
+async-broadcast = "0.7.2"
+async-stream = "0.3.6"
 
