--- a/blog_api/Cargo.toml
+++ b/blog_api/Cargo.toml
@@ -29,4 +29,6 @@ urlencoding = "2.1.3"
 hotwatch = "0.5.0"
 async-broadcast = "0.7.2"
 async-stream = "0.3.6"
+futures-util = "0.3.31"
+futures = "0.3.31"
 
